--- a/00-challenges/weather/src/index.css
+++ b/00-challenges/weather/src/index.css
@@ -4,6 +4,10 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Oxygen:wght@300;400;700&display=swap');
 
+.App {
+  animation: all 3s ease-in;
+}
+
 .oxygen-light {
     font-family: "Oxygen", sans-serif;
     font-weight: 300;
@@ -37,3 +41,10 @@
     }
   }
 
+  .material-symbols-outlined {
+    font-variation-settings:
+    'FILL' 0,
+    'wght' 400,
+    'GRAD' 0,
+    'opsz' 24
+  }
