--- a/00-challenges/weather/src/index.css
+++ b/00-challenges/weather/src/index.css
@@ -4,11 +4,8 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Oxygen:wght@300;400;700&display=swap');
 
-.App {
-  animation: all 3s ease-in;
-}
 
-.oxygen-light {
+  .oxygen-light {
     font-family: "Oxygen", sans-serif;
     font-weight: 300;
     font-style: normal;
@@ -47,4 +44,8 @@
     'wght' 400,
     'GRAD' 0,
     'opsz' 24
+  }
+
+  .active {
+    @apply bg-blue-300/20 rounded-2xl
   }
