--- a/09-react-quiz/src/index.css
+++ b/09-react-quiz/src/index.css
@@ -100,19 +100,25 @@ h4 {
 }
 
 progress {
-  -webkit-appearance: none;
+  background-color: var(--color-medium);
+  border-radius: 100px;
+  border: none;
   width: 100%;
   height: 12px;
   grid-column: 1 / -1;
+  -webkit-appearance: none;
 }
 
+
 ::-webkit-progress-bar {
-  background-color: var(--color-medium);
+  background-color: var(--color-medium)!important;
   border-radius: 100px;
 }
-::-webkit-progress-value {
-  background-color: var(--color-theme);
-  border-radius: 100px;
+
+::-webkit-progress-value,
+::-moz-progress-bar {
+  background-color: var(--color-theme)!important;
+  border-radius: 100px; 
 }
 
 .btn {
